[package]
name = "appjaillauncher-rs"
version = "0.2.0"
authors = ["yying <andy@trailofbits.com>"]
build = "build.rs"

[build-dependencies]
vergen = "0.1.1"

[dependencies]
field-offset = "0.1.1"
libc = "0.2.22"
widestring = "0.2.2"
tempdir = "0.3.7"
clap = "2.24.2"
log = "0.3.8"
env_logger = "0.4.3"
windows-acl = "0.2"
winapi = { version = "0.3", features = [
    'synchapi', 'userenv', 'winuser', 'ws2def', 'ws2tcpip', 'winsock2'
]}
