[package]
name = "appjaillauncher-rs"
version = "0.2.0"
authors = ["yying <andy@trailofbits.com>"]
build = "build.rs"

[build-dependencies]
vergen = "3"

[dependencies]
field-offset = "0.3"
libc = "0.2"
widestring = "0.4"
tempdir = "0.3"
clap = "2"
log = "0.4"
flexi_logger = "0.15"
windows-acl = "0.2"
winapi = { version = "0.3", features = [
    'synchapi', 'userenv', 'winuser', 'ws2def', 'ws2tcpip', 'winsock2'
]}
